// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`current user actions change password 1`] = `
Array [
  Object {
    "type": "CHANGE_PASSWORD_START",
  },
  Object {
    "resp": Object {
      "new_password": "newPassword",
      "old_password": "password",
    },
    "type": "CHANGE_PASSWORD_SUCCESS",
  },
]
`;

exports[`current user actions handle2FAEnforced() should display the banner 1`] = `
Array [
  Array [
    Object {
      "actionHTML": "<span class=\\"d-inline-flex align-items-baseline\\">
                             <span class=\\"text-primary\\">Setup 2FA</span>
                         </span>",
      "dismissible": false,
      "id": "two-fa-setup-required-banner",
      "message": "Action required: your admin requires you to enable Two-Factor Authentication (2FA) before 05/25/2022.",
      "onClick": [Function],
      "showIcon": true,
      "status": "warning",
      "style": "banner",
    },
  ],
]
`;

exports[`current user actions setIsAvailable() should dispatch with status 1`] = `
Array [
  Object {
    "payload": true,
    "type": "SET_IS_AVAILABLE",
  },
]
`;

exports[`current user actions setIsAvailable() should dispatch with status 2`] = `
Array [
  Object {
    "payload": false,
    "type": "SET_IS_AVAILABLE",
  },
]
`;

exports[`current user actions submit setting creation 1`] = `
Array [
  Object {
    "settingType": "macro",
    "type": "SUBMIT_SETTING_START",
  },
  Object {
    "isUpdate": false,
    "resp": Object {
      "data": Object {},
      "id": 1,
      "type": "macro",
    },
    "settingType": "macro",
    "type": "SUBMIT_SETTING_SUCCESS",
  },
]
`;

exports[`current user actions submit setting should update available status and fetch chats 1`] = `
Array [
  Object {
    "settingType": "preferences",
    "type": "SUBMIT_SETTING_START",
  },
  Object {
    "isUpdate": false,
    "resp": Object {
      "data": Object {
        "available": false,
      },
      "id": 1,
      "type": "preferences",
    },
    "settingType": "preferences",
    "type": "SUBMIT_SETTING_SUCCESS",
  },
  Object {
    "tickets": Array [
      Object {
        "id": 1,
      },
    ],
    "type": "SET_CHATS",
  },
]
`;

exports[`current user actions submit setting update 1`] = `
Array [
  Object {
    "settingType": "macro",
    "type": "SUBMIT_SETTING_START",
  },
  Object {
    "isUpdate": true,
    "resp": Object {
      "data": Object {},
      "id": 1,
      "type": "macro",
    },
    "settingType": "macro",
    "type": "SUBMIT_SETTING_SUCCESS",
  },
]
`;

exports[`current user actions submitSettingSuccess should dispatch the next setting 1`] = `
Array [
  Object {
    "isUpdate": true,
    "resp": Object {
      "data": Object {
        "1": Object {
          "display_order": 2,
          "hide": false,
        },
      },
      "id": 1,
      "type": "ticket-views",
    },
    "settingType": "ticket-views",
    "type": "SUBMIT_SETTING_SUCCESS",
  },
]
`;

exports[`current user actions update2FAEnabled should dispatch when the status is the same 1`] = `
Array [
  Object {
    "status": true,
    "type": "UPDATE_2FA_STATUS",
  },
]
`;

exports[`current user actions update2FAEnabled should dispatch with status 1`] = `
Array [
  Object {
    "status": true,
    "type": "UPDATE_2FA_STATUS",
  },
]
`;

exports[`current user actions update2FAEnabled should dispatch with status 2`] = `
Array [
  Object {
    "status": false,
    "type": "UPDATE_2FA_STATUS",
  },
]
`;
